--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.3.2
-uvicorn==0.22.0
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
@@ -13,4 +13,6 @@ requests==2.30.0
 urllib3==2.0.2
 Werkzeug==2.3.3
 zipp==3.15.0
-tensorflow==2.12.0
+tensorflow>=2.16.0
+Pillow>=11.0.0
+python-dotenv==1.0.1
