--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,14 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.3.2
+google-api-core==2.23.0
+google-auth==2.36.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-pasta==0.2.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
 gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
